@@ -1,9 +1,12 @@
 2005-10-04  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* library/dialog.tcl (::tk_dialog): add tkwait visibility before
+	grab. [Bug 1216775]
+
 	* win/tkWinDialog.c (ChooseDirectoryValidateProc): reset stored
 	path to "" if it doesn't exist and -mustexist is true. [Bug 1309218]
 	Remove old-style dir chooser (no longer used).
-	
+
 	* macosx/tkMacOSXInt.h: add MODULE_SCOPE definition check for
 	extension writers that access private headers on OS X and don't
 	define it in configure.
